# megahal-035

./: .gitignore  PKG-INFO  README.md  megahal.py  setup.cfg  setup.py  test.py  util.py
megahal/: __init__.py  megahal.py  megahal.pyi
scripts/: megahal
