[metadata]
name = megahal
version = attr: megahal.__version__
description = Python implementation of megahal markov bot (fork)
long_description = file: README.md
author = Chris Jones, Robert Huselius
author_email = robert@huseli.us
long_description_content_type = text/markdown
url = https://github.com/Eboreg/megahal
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic

[options]
packages = megahal
python_requires = >=3.6
install_requires =
    python-Levenshtein
    twitterhal
scripts =
    scripts/megahal

[flake8]
exclude =
    .git
    __pycache__
    *.pyi
ignore = W504,W601,F821,F723
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5

[mypy]
follow_imports = skip
show_error_codes = True
ignore_missing_imports = True
files = .
